Start for Whinge app: copied chat app and renamed some things.

--- a/samplecode/web/whinge/whinge-mockup.html
+++ b/samplecode/web/whinge/whinge-mockup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Whinge</title>
-        <link rel="stylesheet" href="whinge.css">
+        <link rel="stylesheet" href="static/whinge.css">
     </head>
 
     <body>
